--- a/css-box-model/box-styles.css
+++ b/css-box-model/box-styles.css
@@ -1,8 +1,35 @@
 h1, p {
     background-color: #dde0e3; /* Light Gray */
+
+}
+
+h1{
+  padding: 50px;
+  border-bottom: 1px solid #5D6063;
+}
+
+p{
+padding: 20px 0px 20px 10px; /* vertical horizontal OR you you can put all foour numbers side by side
+That would get read like top, right, bottom, left*/
+margin-top: 25px;
+margin-bottom: 20px;
 }
 
 em, strong {
     background-color: #B2D6FF; /* light blue */
+    display: inline;
 }
 
+strong{
+  margin: 50px;
+}
+
+div{
+  color: #fff;
+  background-color: #5995DA;
+  font-weight: bold;
+  padding: 20px;
+  text-align: center;
+  border: 2px solid #5D6063;
+  border-radius: 5px;
+}
